// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`list 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    \\"hi \\", interpolate(ctx.list[0]), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`named 1`] = `
"function __msg__ (ctx) {
  const interpolate = val => { return val == null ? \\"\\" : Array.isArray(val) || ((Object.prototype.toString.call(val) === \\"[object Object]\\") && val.toString === Object.prototype.toString) ? JSON.stringify(val, null, 2) : String(val) }
  return [
    \\"hi \\", interpolate(ctx.named.name), \\" !\\", \\"\\"
  ].join(\\"\\")
}"
`;

exports[`plural 1`] = `
"function __msg__ (ctx) {
  return [
    \\"no apples\\", \\"one apple\\", \\"too much apples  \\", \\"\\"
  ][ctx.plural.rule(ctx.plural.index, 3)]
}"
`;

exports[`text 1`] = `
"function __msg__ (ctx) {
  return \\"hello world\\"
}"
`;
